--- a/views/partials/user/profileSidebar.ejs
+++ b/views/partials/user/profileSidebar.ejs
@@ -49,7 +49,7 @@
                 </a>
             </li>   
             <li>
-                <a href="#"
+                <a href="/wallet"
                     class="flex items-center p-2 text-gray-900 rounded-lg dark:text-gray-800 hover:bg-gray-100 dark:hover:bg-yellow-400 group">
                     <svg class="shrink-0 w-5 h-5 text-gray-500 transition duration-75 dark:text-gray-400 group-hover:text-gray-900 dark:group-hover:text-white"
                         aria-hidden="true" xmlns="http://www.w3.org/2000/svg" fill="currentColor" viewBox="0 0 18 20">
